--- a/src/WixSharp Setup1/WixSharp Setup1.csproj
+++ b/src/WixSharp Setup1/WixSharp Setup1.csproj
@@ -2,8 +2,9 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFramework>net48</TargetFramework>
     <RootNamespace>WixSharp</RootNamespace>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
   
   <ItemGroup>
